kubernetes/ssl/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ingress-testing
spec:
  selector:
    name: api-pod
    app: python-app
  ports:
  - port: 5001
    targetPort: 5001
