kubernetes/ssl/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ingress-testing
spec:
  selector:
    name: db-pod
    app: python-app
  ports:
  - port: 3306
    targetPort: 3306
