kubernetes/ssl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: ingress-testing
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - result.local
    secretName: sslsecret
  rules:
  - host: result.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 5002
